--- a/src/main/resources/com/example/_20250408lesson/transfer.fxml
+++ b/src/main/resources/com/example/_20250408lesson/transfer.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example._20250408lesson.TransferController">
    <children>
       <GridPane layoutX="112.0" layoutY="80.0" prefHeight="240.0" prefWidth="377.0">
         <columnConstraints>
@@ -44,7 +43,7 @@
             <TextField fx:id="amount_field" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Button fx:id="btn_confirm" layoutX="236.0" layoutY="320.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="129.0" text="Confirm">
+      <Button fx:id="btn_confirm" layoutX="236.0" layoutY="320.0" mnemonicParsing="false" onAction="#onConfirmButton" prefHeight="48.0" prefWidth="129.0" text="Confirm">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
